k8s/base/ps-ingestion.yaml
apiVersion: v1
kind: Service
metadata:
  name: ps-ingestion
spec:
  selector:
    app: ps-ingestion
  ports:
    - port: 9080
      targetPort: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ps-ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ps-ingestion
  template:
    metadata:
      labels:
        app: ps-ingestion
    spec:
      containers:
        - name: ps-ingestion
          image: prism/ps-ingestion
          ports:
            - containerPort: 9080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
